# openglnewbie

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  Shader.h  image.cpp  light.cpp  main.cpp
glad/: CMakeLists.txt
shaders/: light.fsh  lightFragment.fsh  lightVertex.vsh  second.fsh  shader.fsh  shader.vsh
